--- a/Accessory_figs_20160218.Rmd
+++ b/Accessory_figs_20160218.Rmd
@@ -11,31 +11,25 @@ plot(scaled_failure_count~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),pc
 mod <- sma(bud_failed_count~seed_size,data=subset(SummaryInd,abortedcosts>1e-8),log="xy",method="OLS",slope=1)
 summary(mod)
 
+plot(seedset~prop_prepollencosts,data=subset(SummaryInd,seedset>0),pch=16,log="y",col=col.spp(species))
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
+mod <-sma(seedset~prop_prepollencosts,data=subset(SummarySpp[["mean"]],seedset>0&species!="PHPH"&species!="PUTU"),log="",method="OLS")
+summary(mod)
+sma_abline(mod)
+
+write.csv(PartsSummary, file="figs2/Accessory_Costs/PartsSummary.csv",row.names=FALSE)
+
 #seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
 
-win.metafile("figs2/Accessory_Costs/Figure_cost_of_flowers_vs_seed_size.wmf", height=4, width=12)
+win.metafile("figs2/Accessory_Costs/Figure_cost_of_flowers_vs_seed_size.wmf", height=5, width=15)
 plot
 
-
-
-# species with bigger seeds abort a disprortionate # of buds
-# plot(seed_size~scaled_failure_count,SummarySpp[["mean"]],pch=16,log="xy",col=col.spp(species),ylim=c(.01,1000),xlim=c(.00001,100))
-# mod <- sma(seed_size~scaled_failure_count,data=subset(SummarySpp[["mean"]]),log="xy",slope=-1,method="OLS")
-# sma_abline(mod)
-# sma_sum(mod)
-# 
-# species with bigger seeds produce disproportionately few seeds
-# plot(seed_size~scaled_seed_count,SummarySpp[["mean"]],pch=16,log="xy",col=col.spp(species),ylim=c(.01,1000),xlim=c(.00001,100))
-# mod <- sma(seed_size~scaled_seed_count,data=subset(SummarySpp[["mean"]]),log="xy",slope=1,method="OLS")
-# sma_abline(mod)
-# sma_sum(mod)
-
-par(mfcol=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
+par(mfrow=c(1,3), cex=1, omi=c(.1,.1,.1,.05), mai=c(1,1,.1,.05))
 options(scipen = 4)
 
 #put together, big-seeded plants produce lots more buds than predicted from 1:1 relationship, but the "correct" number of seeds
-plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n",xaxt="n")
+plot(scaled_seed_count~seed_size,SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.01,1000),ylim=c(1e-6,10),yaxt="n",xaxt="n",xlab="seed size (mg)",ylab="count, scaled to plant size")
 points(scaled_bud_count~seed_size,SummaryInd,pch=21,col=col.spp(species))
 #points(scaled_failure_count~seed_size,SummaryInd,pch=2,col=col.spp(species))
 axis(2, at=c(0.000001,0.0001,0.01,1), labels=c(0.000001,0.0001,0.01,1),cex.axis=0.9)
@@ -47,25 +41,29 @@ mod3 <- sma(scaled_failure_count~seed_size,data=subset(SummaryInd,scaled_failure
 sma_abline(mod1)
 abline(mod2$coef[[1]][1,1],mod2$coef[[1]][2,1],col="blue")
 abline(mod3$coef[[1]][1,1],mod3$coef[[1]][2,1],col="red")
+legend("topright",legend=c("seed count","total bud count","failed flower count"),col=c("black","blue","red"),pch=c(16,21,8),bty="n")
 
-#plot(0,0,type="n", axes=FALSE, ann=FALSE)
+
+plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.01,1000),ylim=c(.01,.3),cex=1.5,xaxt="n",xlab="seed size (mg)",ylab="seed set")
+mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
+abline(mod$coeff[1],mod$coeff[2])
+text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),10^((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
+     paste("r2 = ",round(glance(mod)[1],2)),adj=1)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.9)
+legend("bottomleft",legend=labels.spp(),col=col.spp(),pch=16, cex=.9,bty="n")
+
 
 #species that abort a disprortionate # of buds can do so because the relative cost of buds (relative to seeds, dispersal) is small
-plot(seedset~prop_prepollencosts,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species),xlim=c(-.2,1),cex=1.5)
-mod <- sma(seedset~prop_prepollencosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
+plot(prop_prepollencosts~seedset,SummarySpp[["mean"]],pch=16,log="x",col=col.spp(species),ylim=c(-.2,1),xlim=c(.01,.3),cex=1.5,yaxt="n",ylab="pre-pollination costs (proportion of total seed costs)",xlab="seed set")
+mod <- sma(prop_prepollencosts~seedset,data=subset(SummarySpp[["mean"]]),log="x",slope=1,method="OLS")
+y.error.bars(SummarySpp[["mean"]]$seedset,SummarySpp[["mean"]]$prop_prepollencosts,SummarySpp[["se"]]$prop_prepollencosts)
 sma_abline(mod)
 sma_sum(mod)
+text(10^((0.99*(par("usr")[2]-par("usr")[1]))+par("usr")[1]),((0.98*(par("usr")[4]-par("usr")[3]))+par("usr")[3]),
+     paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
+axis(2, at=c(-0.2,0,.2,.4,.6,.8,1), labels=c("",0.0,0.2,0.4,0.6,0.8,""),cex.axis=1)
 
-
-#species that produce a disproportionte number of seeds can do so because they have proportionately lower dispersal costs
-plot(seedset~prop_dispersalcosts,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species),xlim=c(-.2,1),cex=1.5)
-mod <- sma(seedset~prop_dispersalcosts,data=subset(SummarySpp[["mean"]]),log="y",slope=1,method="OLS")
-sma_abline(mod)
-sma_sum(mod)
-
-sma_sum(mod1)
-sma_sum(mod2)
-sma_sum(mod3)
 dev.off()
 ```
 
@@ -104,10 +102,10 @@ write.csv(results, file="figs2/Accessory_Costs/Table02correlations_with_repro_in
 
 #Figure 1. Correlations of various reproductive investment categories against plant weight
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure01_correlations_with_plant_weight.wmf", height=10, width=10)
+win.metafile("figs2/Accessory_Costs/Figure01_correlations_with_plant_weight.wmf", height=5, width=10)
 plot
 
-par(mfrow=c(2,2), cex=1, omi=c(.1,.6,.1,.05), mai=c(.8,.1,.1,.05))
+par(mfrow=c(1,2), cex=1, omi=c(.1,.6,.1,.05), mai=c(.8,.1,.1,.05))
 options(scipen = 4)
 
 xvar <- "total_weight_0"
@@ -116,12 +114,12 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),log="xy",ylim=c(1,300000),xlim=c(1,10000000),xlab="",ylab="",lty=results$linetype,pch=16)
+#plot(fit,col=col.spp(fit$groupsummary$group),log="xy",ylim=c(1,300000),xlim=c(1,10000000),xlab="",ylab="",lty=results$linetype,pch=16)
 mod <- lm(log10(total_weight_0)~log10(repro_inv),data=subset(SummaryInd,repro_inv>0))
 abline(0,1)
-words.top.left.logxy(mod)
-mtext(text="total reproductive investment (mg)",side=2,line=2,outer=TRUE)
-mtext(text="total plant weight (mg)",side=1,line=2,outer=FALSE)
+#words.top.left.logxy(mod)
+#mtext(text="total reproductive investment (mg)",side=2,line=2,outer=TRUE)
+#mtext(text="total plant weight (mg)",side=1,line=2,outer=FALSE)
 
 yvar <- "repro_inv"
 xvar <- "propagule_inv"
@@ -132,8 +130,8 @@ results <- lines(fit$groupsummary)
 plot(fit,col=col.spp(fit$groupsummary$group),log="xy",ylim=c(1,300000),xlim=c(1,300000), xlab="",ylab="",lty=results$linetype,pch=16)
 abline(0,1)
 mod <- lm(log10(propagule_inv)~log10(repro_inv),data=subset(SummaryInd,propagule_inv>0))
-words.top.left.logxy(mod)
 mtext(text="investment in propagules (mg)",side=1,line=2,outer=FALSE)
+mtext(text="total reproductive investment (mg)",side=2,line=2,outer=TRUE)
 
 xvar <- "repro_all_count"
 yvar <- "repro_inv"
@@ -141,8 +139,8 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy",slope.test=1)
 results <- lines(fit$groupsummary)
-plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(1,300000),xlim=c(1,30000))
-mtext(text="buds initiated",side=1,line=2,outer=FALSE)
+#plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(1,300000),xlim=c(1,30000))
+#mtext(text="buds initiated",side=1,line=2,outer=FALSE)
 
 xvar <- "flower_inv"
 yvar <- "repro_inv"
@@ -150,9 +148,10 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy",slope.test=1)
 results <- lines(fit$groupsummary)
-plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(1,300000),xlim=c(1,300000))
+plot(fit,xlab="",ylab="",pch=16, col=col.spp(fit$groupsummary$group),lty=results$linetype,ylim=c(1,300000),xlim=c(1,300000),yaxt="n")
+legend("bottomright",legend=labels.spp(),col=col.spp(),pch=16, cex=.8,bty="n")
 abline(0,1)
-mtext(text="flower weight * bud count",side=1,line=2,outer=FALSE)
+mtext(text="flower weight * bud count (mg)",side=1,line=2,outer=FALSE)
 
 dev.off()
 ```
@@ -181,10 +180,7 @@ summary(mod)
 
 
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure02_seedsize_vs_reproinv.wmf", height=5, width=10)
-plot
-
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
 
 plot(repro_inv~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
 mod <- lm(log10(repro_inv)~log10(seed_size),SummarySpp[["mean"]])
@@ -192,7 +188,10 @@ abline(mod$coeff[1],mod$coeff[2])
 words.top.left.logxy(mod)
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$repro_inv,SummarySpp[["se"]]$repro_inv)
 
+win.metafile("figs2/Accessory_Costs/Figure02_seedsize_vs_reproinv.wmf", height=5, width=5)
+plot
 
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
 plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
 mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
 abline(mod$coeff[1],mod$coeff[2])
@@ -204,7 +203,7 @@ dev.off()
 
 #Table showing accessory cost values for the species
 ```{r}
-acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seedset,accessory_per_seed,prepollencosts,prepollen_all_per_seed,postpollen_aborted_per_seed,packaging_dispersal_per_seed,prop_accessory_nonzero)
+acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,seed_size,seedset,accessory_per_seed,prepollencosts,prepollen_all_per_seed,prepollen_failure_per_seed,postpollen_aborted_per_seed,packaging_dispersal_per_seed,prop_accessory_nonzero)
 acc_costs_spp$species <- labels.spp.full()
 acc_costs_spp <- format(acc_costs_spp, digit=2)
 
@@ -213,53 +212,43 @@ write.csv(acc_costs_spp, file="figs2/Accessory_Costs/Table02_AccCosts_by_Species
 
 #Figure 2 and Table 3. Scaling of accessory costs versus seed size, by species
 ```{r}
-win.metafile("figs2/Accessory_Costs/Figure02_seed_size_correlations.wmf", height=5, width=20)
+win.metafile("figs2/Accessory_Costs/Figure02_seed_size_correlations.wmf", height=5, width=15)
 plot
 
-par(mfrow=c(1,4), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
+par(mfrow=c(1,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
 options(scipen = 5)
 
-yvar <- "seedcosts"
-xvar <- "seed_size"
-data <- subset(SummarySpp[["mean"]])
-plot(seedcosts~seed_size,data=data,col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="all costs to make 1 seed (mg) = seedcosts",ylim=c(.02,20000), xlim=c(.02,20000))
-slopes <- sma(data[[yvar]] ~ data[[xvar]], method="OLS", slope.test=1,log="xy")
-mod <- lm(log10(seedcosts)~log10(seed_size),SummarySpp[["mean"]])
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-#abline(slopes$groupsummary["Int"][[1]],1,col="red")
-abline(0,1,col="red")
-words.top.left.logxy(mod)
-
-plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,20000), xlim=c(.02,20000), ylab="total per seed accessory costs (mg/seed)",xlab="",cex=1.5)
+plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="total accessory costs per seed (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(accessory_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
-slopes <- sma(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),slope.test=1,log="xy")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-#abline(slopes$groupsummary["Int"][[1]],1,col="red")
-abline(0,1,col="red")
-words.bottom.left.logxy(mod)
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
-plot(repro_inv~seed_size,SummarySpp[["mean"]],log="xy",ylab="reproductive investment (mg)",col=col.spp(species),pch=16, ylim=c(.02,20000), xlim=c(.02,20000),cex=1.5)
-mod <- lm(log10(repro_inv)~log10(seed_size),data=subset(SummarySpp[["mean"]],species!="EPMI"))
-abline(mod$coeff[1],mod$coeff[2])
-words.bottom.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$repro_inv,SummarySpp[["se"]]$repro_inv)
-abline(0,1,col="red")
+plot(prepollencosts~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="required pre-pollination costs per seed (mg/seed)",xlab="",cex=1.5)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$prepollencosts,SummarySpp[["se"]]$prepollencosts)
+mod <- lm(log10(prepollencosts)~log10(seed_size),SummarySpp[["mean"]])
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
 
-plot(seedset~seed_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.02,20000),cex=1.5)
-mod <- lm(log10(seedset)~log10(seed_size),SummarySpp[["mean"]])
-abline(mod$coeff[1],mod$coeff[2])
-words.bottom.left.logxy(mod)
-y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
-
-mtext(text="seed size (mg)",side=1,line=2,outer=TRUE)
-
+plot(packaging_dispersal_per_seed~seed_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,20000), xlim=c(.02,20000), ylab="packaging and dispersal costs per seed (mg/seed)",xlab="",cex=1.5)
+y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$packaging_dispersal_per_seed,SummarySpp[["se"]]$prepollencosts)
+mod <- lm(log10(packaging_dispersal_per_seed)~log10(seed_size),SummarySpp[["mean"]])
+abline(coef(mod)[1],coef(mod)[2])
+abline(coef(mod)[1],1,col="red")
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 dev.off()
 ```
 
-
-
 ```{r}
+par(mfrow=c(2,3), cex=1, omi=c(.6,.1,.05,.05), mai=c(.1,.8,.05,.05)) 
+options(scipen = 5)
+
 plot(accessory_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), xlim=c(.02,10000), ylab="total per seed accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(accessory_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],accessory_per_seed>0))
 y.error.bars(SummarySpp[["mean"]]$seed_size,SummarySpp[["mean"]]$accessory_per_seed,SummarySpp[["se"]]$accessory_per_seed)
@@ -302,7 +291,7 @@ acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2
 plot(packaging_dispersal_per_seed ~ seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy", ylim=c(.02,10000), ylab="dispersal & packaging accessory costs (mg/seed)",xlab="",cex=1.5)
 mod <- lm(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"))
 words.top.left.logxy(mod)
-slopes <- sma(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]]),slope.test=1)
+slopes <- sma(log10(packaging_dispersal_per_seed) ~ log10(seed_size),data=subset(SummarySpp[["mean"]],species!="LEES"),slope.test=1)
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,col="red")
 acc_by_species <- dplyr::bind_rows(acc_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
@@ -311,65 +300,6 @@ mtext(text="seed size (mg)",side=1,line=1.5,outer=TRUE)
 acc_by_species$variable = c("total accessory costs","prepollen_success","prepollen_failure","c div p","dispersal")
 
 write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_by_species.csv",row.names=FALSE)
-```
-
-#species with bigger seeds, lower seedset spend less per flower. Here taking the prop of the cost to make a single flower that goes into pre-pollination parts
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_seedcosts_vs_seedsize.wmf", height=5, width=5)
-plot
-
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.05), mai=c(.8,.8,.1,.1))
-
-yvar <- "seedcosts"
-xvar <- "seed_size"
-data <- subset(SummarySpp[["mean"]])
-plot(seedcosts~seed_size,data=data,col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="seed size (mg)",ylab="all costs to make 1 seed (mg) = seedcosts",ylim=c(.02,10000), xlim=c(.02,10000))
-slopes <- sma(data[[yvar]] ~ data[[xvar]], method="OLS", slope.test=1,log="xy")
-mod <- lm(log10(seedcosts)~log10(seed_size),SummarySpp[["mean"]])
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-#abline(slopes$groupsummary["Int"][[1]],1,col="red")
-abline(0,1,col="red")
-extra.topleft.logxy("total accessory costs required to produce 1 seed are lower for smaller seeded species")
-words.bottom.right.logxy(mod)
-seedcosts_by_species <- select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
-dev.off()
-```
-
-```{r}
-xvar <- "seed_size"
-yvar <- "prop_prepollencosts"
-data <- subset(SummarySpp[["mean"]])
-plot(prop_prepollencosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="prop seedcosts for prepollination")
-extra.topleft.logxy("species with big seeds have low costs of producing a single flower")
-slopes <- sma(data[[yvar]] ~ data[[xvar]], method="OLS", slope.test=1,log="xy")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-# abline(slopes$groupsummary["Int"][[1]],-1,col="red")
-seedcosts_by_species <- dplyr::bind_rows(seedcosts_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
-
-yvar <- "prop_dispersalcosts"
-plot(prop_dispersalcosts~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5,xlab="",ylab="prop seedcosts for dispersal")
-extra.topleft.logxy("species with big seeds have high packaging and dispersal costs")
-slopes <- sma(data[[yvar]] ~ data[[xvar]], method="OLS", slope.test=1,log="xy")
-abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
-# abline(slopes$groupsummary["Int"][[1]],1,col="red")
-seedcosts_by_species <- dplyr::bind_rows(seedcosts_by_species, select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p))
-mtext(text="seed size (mg)",side=1,line=2,outer=TRUE)
-
-seedcosts_by_species$variable = c("total seedcosts","prepollen costs (% of total)","dispersal costs (% of total)")
-write.csv(seedcosts_by_species, file="figs2/Accessory_Costs/Table04_seedcosts_by_species.csv",row.names=FALSE)
-```
-
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_seedset_vs_seedsize.wmf", height=5, width=5)
-plot
-
-par(mfrow=c(1,1), cex=1, omi=c(1,1,.1,.1), mai=c(1,1,.5,.5)) 
-plot(seedset~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=2)
-mod <- lm(log10(seed_size)~log10(seedset),data=subset(SummarySpp[["mean"]]))
-#abline(mod$coefficients[1],mod$coefficients[2])
-words.top.left.logxy(mod)
-
-dev.off()
 ```
 
 #Table 4 and Figure 3.Per seed accessory costs are lower in individuals with higher seed count. 
@@ -400,26 +330,6 @@ write.csv(results, file="figs2/Accessory_Costs/Table04a_seedcount_vs_accessory.c
 dev.off()
 ```
 
-```{r}
-win.metafile("figs2/Accessory_Costs/Figure_acc_cost_by_seedset.wmf", height=5, width=5)
-plot
-
-par(mfrow=c(1,1), cex=1, omi=c(.5,.1,.1,.1), mai=c(.1,1,.3,.1)) 
-
-xvar <- "seed_size"
-yvar <- "seedcosts"
-
-plot(seedcosts~seed_size,data=subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0),log="xy",pch=16,col=col.spp(species),cex=2)
-mod <-lm(log10(seedcosts)~log10(seed_size),SummaryInd)
-abline(mod$coeff[1],mod$coeff[2])
-words.top.left.logxy(mod)
-
-#text((10^(par()$usr[1])*1.4),(10^(par()$usr[4])*.8),summary(mod)$coefficients[1,1])
-dev.off()
-```
-
-
-remove(SummaryInd)
 #Table 4 extra - showing propagule investment instead of seed_count. Could also replace with seedset
 ```{r}
 win.metafile("figs2/Accessory_Costs/Figure_acc_cost_by_seedset.wmf", height=9, width=9)
@@ -444,7 +354,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="b div p = pre-pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
+plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="pre-pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000),xaxt="n")
 legend_with_r2(results,"bottomleft")
 
 write.csv(results, file="figs2/Accessory_Costs/Table06a_prepollen_all_per_seed_vs_seedset.csv",row.names=FALSE)
@@ -455,7 +365,7 @@ data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
 
 fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy") 
 results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="c div p = aborted post pollination (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000))
+plot(fit,col=col.spp(results$group),pch=16,xlab="",ylab="aborted post pollination costs (mg/seed)",lty=results$linetype,xlim=c(.0005,.5),ylim=c(.01,200000))
 legend_with_r2(results,"bottomleft")
 
 
@@ -486,7 +396,7 @@ results <- lines(fit$groupsummary)
 results <- select(results,group,r2,Slope)
 names(results) <- c("species","r2","slope")
 
-results$ovules_per_fruit <- c(60,4,1,1,2,2,2,4,1,40,2,20,2)
+results$ovules_per_fruit <- c(60,4,1,1,2,2,2,4,1,40,2,1,2)
 max_seedset <- select(SummarySpp[["max"]],species,seedset) 
 min_seedset <- select(SummarySpp[["min"]],species,seedset) 
 results <- merge(results, max_seedset, by=c("species"), all=TRUE)
@@ -497,7 +407,7 @@ win.metafile("figs2/Accessory_Costs/Table07_dispcosts_vs_ovules.wmf", height=6, 
 plot
 
 par(mfrow=c(1,1), cex=1, omi=c(.4,.4,.1,.1), mai=c(.8,.8,.2,.2)) 
-plot(ovules_per_fruit~r2,data=subset(results),log="y",col=col.spp(species),pch=16,cex=2,ylab="ovules per fruit",xlab="slope between dispersal costs and seedset")
+plot(ovules_per_fruit~r2,data=subset(results),log="y",col=col.spp(species),pch=16,cex=2,ylab="ovules per flower",xlab="slope between dispersal costs and seedset")
 mod <- lm(log10(ovules_per_fruit)~r2,data=subset(results,species!="PELA"))
 abline(mod$coeff[1],mod$coeff[2])
 words.top.left.logy(mod)
@@ -527,18 +437,6 @@ legend_with_r2(results,"bottomright")
 
 write.csv(results, file="figs2/Accessory_Costs/Table05a_accessory_vs_RE.csv",row.names=FALSE)
  
-xvar <- "RA"
-yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0&SummaryInd$age>2)
-
-fit <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], method="OLS", log="xy")
-results <- lines(fit$groupsummary)
-plot(fit,col=col.spp(fit$groupsummary$group),pch=16,xlab="",ylab="",lty=results$linetype)
-mtext(text="RA",side=1,line=2,outer=FALSE)
-legend_with_r2(results,"topleft")
-
-write.csv(results, file="figs2/Accessory_Costs/Table05b_accessory_vs_RA.csv",row.names=FALSE)
-
 xvar <- "total_weight_0"
 yvar <- "accessory_per_seed"
 data <- subset(SummaryInd,SummaryInd[[xvar]]>0&SummaryInd[[yvar]]>0)
@@ -570,7 +468,7 @@ dev.off()
 win.metafile("figs2/Accessory_Costs/Figure_seedcount_reprocount.wmf", height=5, width=5)
 plot
 
-par(mfrow=c(1,1), cex=1, omi=c(.1,0.1.1,0.05), mai=c(.8,.8,.1,0.1))
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,0.05), mai=c(.8,.8,.1,0.1))
 options(scipen = 2)
 
 xvar <- "prepollen_all_count"
@@ -586,13 +484,6 @@ abline(-2,1,lwd=2)
 
 legend_with_r2(results,"topleft")
 
-
-summary(results)
-summary(fit)
-
-fit2 <- sma(data[[yvar]] ~ data[[xvar]]*data[["species"]], log="xy",slope.text=1)
-summary(fit2)
-
 dev.off()
 ```
 #Considering the individual components of accessory costs vs. seedset - since seedset best predictor of accessory costs
@@ -600,18 +491,19 @@ dev.off()
 #For each species the accessory cost components that cause shifts in total accessory costs is different and reflects both which components are largest and whichvary most with some factor - seedset, age, etc.
 ```{r}
 xvar1 <- "packaging_dispersal_per_seed"
-xvar2 <- "prepollen_all_per_seed"
+xvar2 <- "prepollencosts"
 xvar3 <- "postpollen_aborted_per_seed"
+xvar4 <- "prepollen_failure_per_seed"
 yvar <- "accessory_per_seed"
-data <- subset(SummaryInd,SummaryInd[[xvar1]]>0&SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species!="BAER"&species!="COER"&species!="LEES")
+data <- subset(SummaryInd,SummaryInd[[xvar1]]>0&SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&SummaryInd[[xvar4]]>0&SummaryInd[[yvar]]>0&species!="BAER"&species!="COER"&species!="LEES")
 data <- split(data, data$species)
 
-mod <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar1]]))+(log10(x[[xvar2]]))+(log10(x[[xvar3]]))))
-mod_LEES <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(postpollen_aborted_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species=="LEES"))
-mod_BAER <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="BAER"))
-mod_COER <- lm(log10(accessory_per_seed) ~ (log10(prepollen_all_per_seed)+(log10(packaging_dispersal_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="COER"))
+mod <- lapply(data, function(x) lm(log10(x[[yvar]]) ~  (log10(x[[xvar1]]))+(log10(x[[xvar2]]))+(log10(x[[xvar3]])+(log10(x[[xvar4]])))))
+mod_LEES <- lm(log10(accessory_per_seed) ~ (log10(prepollencosts)+(log10(postpollen_aborted_per_seed))+(log10(prepollen_failure_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar3]]>0&species=="LEES"))
+mod_BAER <- lm(log10(accessory_per_seed) ~ (log10(prepollencosts)+(log10(packaging_dispersal_per_seed))+(log10(prepollen_failure_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="BAER"))
+mod_COER <- lm(log10(accessory_per_seed) ~ (log10(prepollencosts)+(log10(packaging_dispersal_per_seed))+(log10(prepollen_failure_per_seed))),data=subset(SummaryInd,SummaryInd[[xvar2]]>0&SummaryInd[[xvar1]]>0&species=="COER"))
 
-species_coef <- as.data.frame(c("intercept","packaging&dispersal","prepollen_all_per_seed","postpollen_aborted_per_seed"))
+species_coef <- as.data.frame(c("intercept","packaging&dispersal","prepollencosts","postpollen_aborted_per_seed","pre-pollen failure per seed"))
 
 for(i in 1:11) {
      species_coef <- dplyr::bind_cols(species_coef, as.data.frame(mod[[i]]$coefficients))
@@ -620,17 +512,17 @@ for(i in 1:11) {
 names(species_coef) <- c("effect","BOLE","EPMI","GRBU","GRSP","HATE","HEPU","PELA","PEPU","PHPH","PILI","PUTU")
 
 BAER_c <- as.data.frame(mod_BAER$coefficients)
-BAER_c$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
+BAER_c$effect <- c("intercept","prepollencosts","packaging&dispersal","pre-pollen failure per seed")
 names(BAER_c) <- c("BAER","effect")
 species_coef <- dplyr::left_join(species_coef,BAER_c,by="effect")
 
 COER_c <- as.data.frame(mod_COER$coefficients)
-COER_c$effect <- c("intercept","prepollen_all_per_seed","packaging&dispersal")
+COER_c$effect <- c("intercept","prepollencosts","packaging&dispersal","pre-pollen failure per seed")
 names(COER_c) <- c("COER","effect")
 species_coef <- dplyr::left_join(species_coef,COER_c,by="effect")
 
 LEES_c <- as.data.frame(mod_LEES$coefficients)
-LEES_c$effect <- c("intercept","prepollen_all_per_seed","postpollen_aborted_per_seed")
+LEES_c$effect <- c("intercept","prepollencosts","postpollen_aborted_per_seed","pre-pollen failure per seed")
 names(LEES_c) <- c("LEES","effect")
 species_coef <- dplyr::left_join(species_coef,LEES_c,by="effect")
 
@@ -639,7 +531,7 @@ species_coef <- species_coef[c("effect", "BAER", "BOLE", "COER", "EPMI", "GRBU",
 
 write.csv(species_coef, file="figs2/Accessory_Costs/Table08_accessory_components_coeff.csv",row.names=FALSE)
 
-species_t <- as.data.frame(c("intercept","packaging&dispersal","prepollen_all_per_seed","postpollen_aborted_per_seed"))
+species_t <- as.data.frame(c("intercept","packaging&dispersal","prepollencosts","postpollen_aborted_per_seed","pre-pollen failure per seed"))
 
 for(i in 1:11) {
      species_t <- dplyr::bind_cols(species_t, as.data.frame(summary(mod[[i]])$coefficient[,4]))
@@ -754,11 +646,14 @@ dev.off()
 ```
 
 ```{r}
-ternary <- select(SummarySpp[["mean"]],species,seed_size,prepollencosts,dispersalcosts)
-ternary$seedcosts = ternary$seed_size + ternary$prepollencosts + ternary$dispersalcosts
+ternary <- select(SummarySpp[["mean"]],species,seed_size,prepollencosts,packaging_dispersal_per_seed)
+ternary$packaging_dispersal_per_seed[9] <- 0.1
+
+ternary$seedcosts = ternary$seed_size + ternary$prepollencosts + ternary$packaging_dispersal_per_seed
 ternary$per_seed <-100*ternary$seed_size/ternary$seedcosts
 ternary$per_poll <-100*ternary$prepollencosts/ternary$seedcosts
-ternary$per_disp <-100*ternary$dispersalcosts/ternary$seedcosts
+
+ternary$per_disp <-100*ternary$packaging_dispersal_per_seed/ternary$seedcosts
 mod_poll <- sma(per_poll~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 mod_seed <- sma(per_seed~seedcosts,ternary,slope.test=0,method="OLS",log="x")
 mod_disp <- sma(per_disp~seedcosts,ternary,slope.test=0,method="OLS",log="x")
@@ -797,10 +692,20 @@ dev.off()
 win.metafile("figs2/Accessory_Costs/Ternary.wmf", height=5, width=5)
 plot
 
+par(mfrow=c(1,1), cex=1, omi=c(1,1,1,1), mai=c(.1,.1,.1,.1)) 
+
 ggtern(data=ternary,aes(y=per_seed,x=per_poll,z=per_disp)) +
-  labs(y = "seed weight (%)",x = "prepoll (%)",z = "pack&disp (%)",title = "Seed cost components",size = .5) +
+  labs(y = "seed",
+       x = "pre-poll",
+       z = "pack&disp",
+       Tarrow = "seed weight (%)",
+       Larrow = "pre-pollination costs (%)",
+       Rarrow = "packaging & dispersal costs (%)",
+       title = "Seed cost components",
+       size = 3) +
   geom_point(size=sqrt(ternary$seedcosts/2),shape=20,color=col.spp()) +
    theme_bw() + 
+  theme_showarrows() +
   geom_text(label=ternary$species, color="black", hjust=-.3, vjust=sqrt(ternary$seedcosts/500),size=2)
 
 dev.off()
